# kuchikiki

./: Cargo.toml  README.md
.github/workflows/: audit.yaml  lint.yaml  tests.yaml
benches/: main_bench.rs
examples/: find_matches.rs
src/: attributes.rs  iter.rs  lib.rs  node_data_ref.rs  parser.rs  select.rs  serializer.rs  tests.rs  tree.rs
test_data/real_world/: rust_wikipedia.html  vec_rustdoc.html
