[package]
name = "kuchikiki"
version = "0.8.2"
authors = [
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "(口利き) HTML tree manipulation library"
repository = "https://github.com/brave/kuchikiki"
edition = "2018"

[lib]
name = "kuchikiki"

[[bench]]
name = "main_bench"
harness = false

[dependencies]
cssparser = "0.31"
html5ever = "0.27.0"
selectors = "0.25"
indexmap = "2.2.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tempfile = "3"