[package]
name = "kuchikiki"
version = "0.8.8-speedreader"
authors = [
  "Brave Authors",
  "Ralph Giles <rgiles@brave.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
]
license = "MIT"
description = "(口利き) HTML tree manipulation library"
repository = "https://github.com/brave/kuchikiki"
edition = "2018"

[lib]
name = "kuchikiki"

[dependencies]
cssparser = "0.29.0"
html5ever = "0.36.1"
selectors = "0.24.0"
indexmap = "2.6.0"

[dev-dependencies]
tempfile = "3"
